# geforcedrvchk3

./: .gitignore  Cargo.toml  LICENSE  README.md
System32/: smi-stub.bat
src/: lib.rs  main.rs
