[package]
name = "geforcedrvchk3"
version = "0.5.0"
license = "BSD 3-Clause"
authors = ["Matti J. Karki <mjk@iki.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["blocking"] }

