[package]
name = "geforcedrvchk3"
version = "0.5.1"
license = "BSD 3-Clause"
authors = ["Matti J. Karki <mjk@iki.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }

